--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/CA_test
 spring.datasource.username = postgres
-spring.datasource.password = 12345
+spring.datasource.password = 1234
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.postgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
