--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username = postgres
 spring.datasource.password = 1234
 
 spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.postgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
