--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password = 1234
 
 spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.postgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+tesseract.datapath=D:/Tessaract/Tess4J-3.4.8-src/Tess4J/tessdata/
