--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username = postgres
 spring.datasource.password = 1234
 
 spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.postgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 tesseract.datapath=D:/Tessaract/Tess4J-3.4.8-src/Tess4J/tessdata/
